# cloud-readers-rs

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: codecov.yml  codecov2.yml  rust.yml  tests.yml
notebooks/: Dockerfile  README.md  bench.ipynb  cold_latencies.ipynb  data_generation.ipynb  infra.ipynb  lambda.tf  optimal_parallelism.ipynb  s3_scaling.ipynb
src/: lib.rs  main.rs
src/cache/: cursor.rs  download_cache.rs  file_manager.rs  mock.rs  mod.rs  models.rs  stats.rs
src/new/: mod.rs
src/old/: cached_file.rs  mod.rs  range_cache.rs  s3.rs
src/s3_rusoto/: downloader.rs  file_description.rs  file_handle.rs  mod.rs
