[package]
name = "cloud-readers-rs"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "lambda"
path = "src/bin/lambda.rs"
required-features = ["stats", "s3_rusoto"]

[features]
default = ["stats", "s3_rusoto"]
s3_rusoto = ["rusoto_core", "rusoto_s3"]
stats = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3.15" 
itertools = "0.10.1" 
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.7"
serde = { version = "1.0", features = ["derive"] }

# AWS Lambda binary
lambda_runtime = "0.3"
serde_json = "^1"

# s3_rusoto
rusoto_core = { version = "0.47.0", default_features = false, features=["rustls"], optional = true }
rusoto_s3 = { version = "0.47.0", default_features = false, features=["rustls"], optional = true }

[dev-dependencies]
rusoto_mock = { version = "0.47.0", default_features = false, features=["rustls"] }
